compiler/acton/test/syntaxerrors/err26.act
# Multiple statements on same line without semicolon
def multiple():
    x = 1 y = 2